# kite-mcp-client

./: .gitignore  README.md  app.py  auth.py  database.py  holdings.csv  main.py  models.py  pyproject.toml  render.yaml  schemas.py
templates/: holdings.html
